--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="tink.skeleton">
+<html ng-app="tink.anchorscroll" ng-controller="ctrl">
 <head>
   <meta charset="utf-8">
   <title>Tink module</title>
@@ -11,11 +11,35 @@
 </head>
 <body>
 
-<tink-skeleton data-text="Skeleton is working fine!"></tink-skeleton>
+<!-- <tink-skeleton data-text="Skeleton is working fine!"></tink-skeleton> -->
+<button ng-click="test()">Test</button>
 
 <!-- bower:js -->
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-resource/angular-resource.js"></script>
+<script src="bower_components/angular-cookies/angular-cookies.js"></script>
+<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+<script src="bower_components/angular-animate/angular-animate.js"></script>
+<script src="bower_components/angular-touch/angular-touch.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
 <!-- endbower -->
 
-<script src="scripts/directives/skeleton.js"></script>
+<script src="scripts/services/tink-anchor-scroll-angular.js"></script>
+
+<script>
+  var myApp;
+    try {
+      myApp = angular.module('tink.anchorscroll');
+    } catch (e) {
+      myApp = angular.module('tink.anchorscroll', ['tink.anchorscroll']);
+    }
+  myApp.controller('ctrl', ['$scope','tinkAnchorScroll', function(scope,tinkAnchorScroll) {
+    scope.test = function() {
+      // console.log('ctrl');
+      tinkAnchorScroll.test();
+    }
+  }]);
+</script>
+
 </body>
 </html>
