Added top nav check + speed parameter

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-sm-push-5 col-md-push-4 col-lg-push-3">
       <h1 id="up">Push the button</h1>
       <p>
-        <button ng-click="scr('down')">Scroll m*th*f*ck*</button>
+        <button ng-click="scr('down')">Scroll down</button>
       </p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin accumsan ultricies bibendum. Quisque pretium libero tellus, quis lobortis diam semper non. Phasellus ultrices consectetur dictum. Phasellus maximus est non libero vehicula ultrices. Duis ac dui vestibulum erat elementum porta ut non nisl. Nullam at neque ut turpis sollicitudin egestas sed ut tortor. Pellentesque maximus lectus lectus, ut tempor enim vulputate ultrices. Nulla ornare auctor est eget euismod. Duis rhoncus vel tortor eget iaculis. Aliquam condimentum arcu eget dolor tincidunt scelerisque. Suspendisse et massa orci.</p>
       <p>Curabitur nec enim quis orci placerat suscipit. Pellentesque hendrerit eu mi a vestibulum. Morbi velit mi, tempor id euismod in, ornare et libero. Donec nec laoreet nisl, eu tincidunt enim. Nam suscipit magna a suscipit ultricies. Curabitur gravida enim nec nisl posuere, at volutpat leo placerat. Suspendisse feugiat egestas laoreet. Duis tempus convallis tortor at lobortis. Vestibulum aliquet nunc ac magna aliquam vestibulum. Integer sed dolor ut tellus suscipit hendrerit. Fusce mollis tortor et ligula egestas gravida. Vivamus malesuada risus vitae est lacinia blandit. Ut at volutpat lorem. Pellentesque eu quam enim. Proin ultricies erat lacus, eget rutrum felis ultricies in. Quisque ullamcorper tortor quis sem pulvinar, a fermentum tortor rhoncus.</p>
